Extract credentials in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=hub
+hub.user.role.username=user
+hub.user.role.password=password
+hub.admin.role.username=admin
+hub.admin.role.password=password
